# green_light_test

./: .gitignore  CMakeLists.txt  README.md  index.html
src/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  HtmlTagCounter.cpp  HtmlTagCounter.h  HtmlTagUtils.cpp  HtmlTagUtils.h  TagStatistics.cpp  TagStatistics.h  main.cpp
tests/: CMakeLists.txt  test_HtmlTagCounter.cpp  test_HtmlTagUtils.cpp
